infrastructure/platform/security/kyverno/policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: 'Running as root is not allowed. Containers must
      set runAsNonRoot: true and specify a non-zero runAsUser.'
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-runasuser
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: payu
    exclude:
      any:
      - resources:
          selector:
            matchExpressions:
            - key: app.kubernetes.io/managed-by
              operator: Exists
      - resources:
          selector:
            matchLabels:
              strimzi.io/cluster: ?*
      - resources:
          selector:
            matchLabels:
              app: infinispan-pod
      - resources:
          selector:
            matchLabels:
              app: payu-cache
      - resources:
          selector:
            matchLabels:
              app: infinispan-config-listener-pod
      - resources:
          selector:
            matchLabels:
              application: payu-broker-app
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: database
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/instance: payu-kafka-console-console-deployment
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: chaos-engineering
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: cost-management
      - resources:
          selector:
            matchLabels:
              app: infinispan-pod
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: cache
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/managed-by: keycloak-operator
      - resources:
          selector:
            matchLabels:
              openshift.io/build.name: ?*
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: affinity-assistant
      - resources:
          selector:
            matchLabels:
              openshift.io/build.name: ?*
      - resources:
          namespaces:
          - payu-cicd
          - openshift-pipelines
          - openshift-gitops
          - vault-secrets-operator
    validate:
      message: 'Running as root is not allowed. Set runAsNonRoot: true and ensure
        a non-zero runAsUser.'
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          =(initContainers):
          - securityContext:
              allowPrivilegeEscalation: false
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              =(runAsUser): '>0'
          containers:
          - securityContext:
              allowPrivilegeEscalation: false
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              =(runAsUser): '>0'
