infrastructure/platform/security/kyverno/policies/require-approved-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-approved-registry
  annotations:
    policies.kyverno.io/title: Approved Registry Only
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: Only approved container registries are allowed
      for image pulls.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-registries
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: payu
    exclude:
      any:
      - resources:
          selector:
            matchExpressions:
            - key: app.kubernetes.io/managed-by
              operator: Exists
      - resources:
          selector:
            matchLabels:
              strimzi.io/cluster: ?*
      - resources:
          selector:
            matchLabels:
              app: infinispan-pod
      - resources:
          selector:
            matchLabels:
              app: payu-cache
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/instance: payu-kafka-console-console-deployment
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: chaos-engineering
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/component: cost-management
      - resources:
          namespaces:
            - vault-secrets-operator
            - openshift-logging
    validate:
      message: Only approved registries are allowed.
      pattern:
        spec:
          =(initContainers):
          - image: image-registry.openshift-image-registry.svc:5000/* | gcr.io/* |
              quay.io/* | registry.redhat.io/* | registry.connect.redhat.com/* |
              ghcr.io/* | docker.io/library/* | docker.io/hashicorp/* |
              docker.io/falcosecurity/* | docker.io/wazuh/* | docker.io/grafana/*
              | docker.io/pactfoundation/* | docker.io/infinispan/* |
              docker.io/amazon/*
          containers:
          - image: image-registry.openshift-image-registry.svc:5000/* | gcr.io/* |
              quay.io/* | registry.redhat.io/* | registry.connect.redhat.com/* |
              ghcr.io/* | docker.io/library/* | docker.io/hashicorp/* |
              docker.io/falcosecurity/* | docker.io/wazuh/* | docker.io/grafana/*
              | docker.io/pactfoundation/* | docker.io/infinispan/* |
              docker.io/amazon/*
